Sun Jul 12 02:47:35 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h:
	* gtk/gtkobject.c:
 	(gtk_object_arg_get_info): new functions which wraps gtk_arg_get_info().

	* gtk/gtkcontainer.h:
	* gtk/gtkcontainer.c:
 	(gtk_container_child_arg_get_info): new function which wraps
 	gtk_arg_get_info().

Fri Jul 10 13:29:53 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.c:
	(gtk_container_arg_get): 
	(gtk_container_arg_set): 
	* gtk/gtkobject.c:
	(gtk_object_arg_set): 
	(gtk_object_arg_get):
	strictly check for the associated get/set arg functions. if an
	arg is readable or writable, the associated class functions *must*
	be provided.

Fri Jul 10 09:37:50 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkaccellabel.c (gtk_accel_label_accelerator_width): only take the
 	padding into account if there is an accelerator.

Fri Jul 10 05:51:44 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.c:
 	(gtk_container_add_with_args): collect the arguments with
 	gtk_container_child_args_collect, not through gtk_object_args_collect.
	(gtk_container_child_set): likewise.

Fri Jul 10 04:20:35 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.h: 
	* gtk/gtktypeutils.c: added a new internal type GTK_TYPE_IDENTIFIER
	which is derived from GTK_TYPE_STRING.

	* gtk/gtkbindings.c: reworked the argument type handling.

Thu Jul  9 21:03:19 CDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpreview.c: add in just enough support for 1 or 4 bits
	  so that it seems to allow normal operation in those modes,
	  although you will only see black  (GIMP toolbar now pops up,
	  just don't create a new image and GIMP now works in 4 bit.)

Thu Jul  9 20:20:04 CDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* gdk/gdkvisuals.c: 4 bit support, increased available_depths
	  array, which was too low (?)

Fri Jul 10 00:02:04 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.h: 
	* gtk/gtkcontainer.c: deleted most of the argument handling code, since